# telsccr

./: .env.example  .gitignore  BATTLE_TESTED_COMPONENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  EXECUTION_COMPLETE.txt  FINAL_SYSTEM_SUMMARY.txt  FIXES_SUMMARY.md  KNOWLEDGE_OVERVIEW.md  LICENSE  MARKET_EXPANSION_GUIDE.md  Makefile  PREMIUM_ANALYSIS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_PROFESSIONAL.md  README_ZERO_COST.md  SECURITY.md  STRATEGIC_ROADMAP.md  SYSTEM_10K_TRAINING_COMPLETE.txt  SYSTEM_STATUS.txt  SYSTEM_SUMMARY.md  SYSTEM_VALUE_SUMMARY.md  TOMORROW_BETS_QUICK_REFERENCE.txt  activate_env.sh  cleanup_disk.sh  deploy.sh  docker-compose.yml  enhanced_predictions_log.txt  fast_optimize_over_2_5.py  generate_enhanced_predictions.py  generate_status_dashboard.py  optimize_to_top_1_percent.py  pyproject.toml  requirements-advanced.txt  requirements-dev.txt  requirements-free.txt  requirements-production.txt  (+17 more)
.devcontainer/: Dockerfile  post-create.sh  post-start.sh
.github/: README.md  copilot-instructions.md
config/: TELEGRAM_TOKEN_BACKUP.txt  config.yaml  telegram_config.py
dashboard/: app.py
data/: README.md
demos/: premium_prediction_demo.py
docs/: ADVANCED_FEATURES.md  PREMIUM_COMPETITIVE_ANALYSIS.md  PREMIUM_VALUE_PROPOSITION.md  SETUP_SECRETS.md  SOVEREIGN_AGENT.md  ZERO_COST_ARCHITECTURE.md
knowledge/: ALL_BETTING_MARKETS.md  BANKROLL_MANAGEMENT.md  BETTING_MARKETS_GUIDE.md  BETTING_MATHEMATICS.md  FORM_ANALYSIS.md  HEAD_TO_HEAD.md  LEAGUE_STATISTICS.md  OPTIMAL_ODDS_RANGES.md  TELEGRAM_SETUP.md
src/: bot.py  (+10 more)
(+385 files in other folders)
